# plugin.video.movix

./: LICENSE.txt  README.en.md  README.md  addon.xml  autoflake.sh  build.fish  conftest.py  default.py  gen_strings_po.py  justfile  pyproject.toml
resources/: plugin.py  settings.xml
resources/language/resource.language.en_gb/: strings.po
resources/language/resource.language.ru_ru/: strings.po
resources/lib/: api.py  router.py  utils.py
resources/lib/controllers/: channel_packages.py  channels.py  movies.py  root.py  serials.py
resources/lib/translation/: __init__.py  en_gb.py  ru_ru.py
tests/: helpers.py  test_api.py  test_router.py  test_utils.py
