[tool.poetry]
name = 'plugin.video.movix'
version = '0.4.0'
description = 'Dom.ru Movix for Kodi'
license = 'MIT'
authors = [
    'Vyacheslav Konovalov <crabvk@protonmail.com>'
]
readme = 'README.md'
repository = 'https://github.com/crabvk/plugin.video.movix'
homepage = 'https://github.com/crabvk/plugin.video.movix'
keywords = ['domrutv', 'movix', 'kodi-plugin', 'kodi-addon']

[tool.poetry.dependencies]
python = '~3.6'
requests = '2.22.0'
Kodistubs = "^19.0.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
polib = "^1.1.1"
pytest = "^6.2.2"
pylint = "^2.7.4"
mock = "^4.0.3"
autopep8 = "^1.5.6"
